2006-09-02  Aaron Bockover  <abock@gnome.org>

	* plugins/Podcast/PodcastInfo.cs: Fix build with latest Banshee CVS

2006-08-07  Aaron Bockover  <abock@gnome.org>

	* banshee-official-plugins.mds:
	* plugins/MiniMode/MiniMode.mdp:
	* plugins/Recommendation/Recommendation.mdp: 
	* plugins/SmartPlaylists/SmartPlaylists.mdp:
	* plugins/Podcast/Podcast.mdp: Updated MonoDevelop projects

	* plugins/MiniMode/MiniModePlugin.cs: Updated plugin description

	* plugins/MiniMode/MiniModeWindow.cs: Removed old toggle states, using
	from Banshee.Gui now (BGO #350295); only allow window resizing 
	horizontally; clean up and review

	* plugins/MiniMode/minimode.glade: Renamed base vbox widget

2006-08-01  Mike Urbanski <michael.c.urbanski@gmail.com>
	
	* plugins/Podcast/FeedParsers/RFC822DateTime.cs: Now makes a best 
	effort to parse invalid RFC-822 date-times that are "close enough."  
	E.g. accepts "July" when "Jul" is expected for the month identifier 
	or "Monday" when "Mon" is expected for the day of week identifier.

2006-07-31  Mike Urbanski <michael.c.urbanski@gmail.com> 
	
	* AUTHORS: Added self as author.

	* plugins/Podcast/Podcast.mdp: Added 'RFC822DateTime.cs' to podcast 
	project.

	* plugins/Podcast/FeedParsers/RFC822DateTime.cs: Initial commit of 
	RFC-822 date-time parser.  Yay!
	
	* plugins/Podcast/FeedParsers/RssPodcastFeedParser.cs: 'RFC822DateTime' 
	is now used to parse RSS 2.0 date-time values.

	* plugins/Podcast/PodcastLibrary.cs:
	* plugins/Podcast/UI/PodcastSource.cs: 
	Partially .Net 2.0-ified, both 'PodcastLibrary' and 'PodcastSource' now 
	use generic collections where required.
	
	* plugins/Podcast/FeedUtils.cs: Relaxed supported file format
	requirements to a negligent level.  Will update further.
	
	* plugins/Podcast/DownloadCore/DownloadCore.cs: Corrected minor string 
	bugs introduced during translation.

	* plugins/Podcast/DownloadCore/HttpDownloadTask.cs: Added invalid range 
	request handling.
